--- a/demo_backend/pom.xml
+++ b/demo_backend/pom.xml
@@ -41,6 +41,11 @@
             <version>2.12.4</version> <!-- Replace with the latest version available -->
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
 
         <dependency>
             <groupId>com.mysql</groupId>
