--- a/demo_backend/src/main/resources/application.properties
+++ b/demo_backend/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/web?useUnicode=true&characterE
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db1?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 #spring.datasource.password=chenyuxuan0909
-#spring.datasource.password=wyx654321
-spring.datasource.password=xuchen402
+spring.datasource.password=wyx654321
+#spring.datasource.password=xuchen402
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
