--- a/demo_backend/src/main/resources/application.properties
+++ b/demo_backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/web?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/web?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 
 
 
@@ -13,7 +13,7 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 mybatis.mapper-locations=classpath:mapping/online/*.xml
 mybatis.type-aliases-package=com.tongji.enso.mybatisdemo.entity.online
 
-server.port=8888
+server.port=9090
 #server.ssl.key-store=classpath:tjensoprediction.com.jks
 #server.ssl.key-store-password=v4chx81zl2ys13i
 #server.ssl.key-store-type=JKS
